Many small changes.

--- a/2021-1-C2-MT2.tex
+++ b/2021-1-C2-MT2.tex
@@ -23,7 +23,7 @@
 % (find-CN-aula-links "2021-1-C2-MT2" "2" "c2m211mt2" "c2mt2")
 %
 % Video (not yet):
-% (find-ssr-links "c2m211mt2" "2021-1-C2-MT2")
+% (find-ssr-links "c2m211mt2" "2021-1-C2-MT2" "{naoexiste}")
 % (code-video     "c2m211mt2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-MT2.mp4")
 % (find-c2m211mt2video "0:00")
 
