--- a/2021-1-C2-P2.tex
+++ b/2021-1-C2-P2.tex
@@ -22,7 +22,7 @@
 % (find-CN-aula-links "2021-1-C2-P2" "2" "c2m211p2" "c2p2")
 %
 % Video (not yet):
-% (find-ssr-links "c2m211p2" "2021-1-C2-P2")
+% (find-ssr-links "c2m211p2" "2021-1-C2-P2" "{naoexiste}")
 % (code-video     "c2m211p2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-P2.mp4")
 % (find-c2m211p2video "0:00")
 
