--- a/2021-1-C2-int-subst.tex
+++ b/2021-1-C2-int-subst.tex
@@ -21,20 +21,8 @@
 % http://angg.twu.net/LATEX/2021-1-C2-int-subst.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-int-subst" "2" "c2m211is" "c2is")
-%
-% Video:
-% (find-ssr-links "c2m211is" "2021-1-C2-int-subst" "3lSrJ6sCWJI")
-% (code-video     "c2m211isvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-int-subst.mp4")
-% (find-c2m211isvideo  "0:00")
-% (find-c2m211isvideo  "6:00" "a obrigação de dizer: eu não entendi esse passo")
-% (find-c2m211isvideo "11:12" "Então dá pra acreditar nesse TFC2 daqui")
-% (find-c2m211isvideo "11:22" "Eu tou definindo uma coisa chamada [S2]")
-% (find-c2m211isvideo "12:20" "e essa parte de cima eu vou chamar de a hipótese")
-% (find-c2m211isvideo "14:03" "se a gente substituir o f minúsculo")
-% (find-c2m211isvideo "14:30" "f(c+d) viraria")
-% (find-c2m211isvideo "15:02" "que lembrem, contém uma hipótese e 3 '='s")
-% (find-c2m211isvideo "15:10" "vira uma coisa que tem o mesmo formato")
 
+% «.video-1»	(to "video-1")
 % «.defs»		(to "defs")
 % «.subst-defs»		(to "subst-defs")
 % «.title»		(to "title")
@@ -55,9 +43,30 @@
 % «.exercicio-2-cont»	(to "exercicio-2-cont")
 % «.gambiarras-2»	(to "gambiarras-2")
 % «.gambiarras-3»	(to "gambiarras-3")
+% «.exercicio-3»	(to "exercicio-3")
+% «.exercicio-4»	(to "exercicio-4")
 % «.exercicio-5»	(to "exercicio-5")
 %
 % «.djvuize»	(to "djvuize")
+
+
+% «video-1»  (to ".video-1")
+% (c2m211isa      "video-1")
+% (find-ssr-links     "c2m211is" "2021-1-C2-int-subst" "3lSrJ6sCWJI")
+% (code-eevvideo      "c2m211is" "2021-1-C2-int-subst" "3lSrJ6sCWJI")
+% (code-eevlinksvideo "c2m211is" "2021-1-C2-int-subst" "3lSrJ6sCWJI")
+% (find-yttranscript-links "3lSrJ6sCWJI" "c2m211is")
+% (find-c2m211isvideo  "0:00")
+% (find-c2m211isvideo  "6:00" "a obrigação de dizer: eu não entendi esse passo")
+% (find-c2m211isvideo "11:12" "Então dá pra acreditar nesse TFC2 daqui")
+% (find-c2m211isvideo "11:22" "Eu tou definindo uma coisa chamada [S2]")
+% (find-c2m211isvideo "12:20" "e essa parte de cima eu vou chamar de a hipótese")
+% (find-c2m211isvideo "14:03" "se a gente substituir o f minúsculo")
+% (find-c2m211isvideo "14:30" "f(c+d) viraria")
+% (find-c2m211isvideo "15:02" "que lembrem, contém uma hipótese e 3 '='s")
+% (find-c2m211isvideo "15:10" "vira uma coisa que tem o mesmo formato")
+
+
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -1089,6 +1098,10 @@ e a outra usa só a nova.
 
 \newpage
 
+% «exercicio-3»  (to ".exercicio-3")
+% (c2m211isp 27 "exercicio-3")
+% (c2m211isa    "exercicio-3")
+
 {\bf Exercício 3.}
 
 Leia o início da seção 6.1 do APEX Calculus
@@ -1110,6 +1123,10 @@ e faça os exercíos 25 até 32 da página 280 dele. Link:
 
 \bsk
 \bsk
+
+% «exercicio-4»  (to ".exercicio-4")
+% (c2m211isp 27 "exercicio-4")
+% (c2m211isa    "exercicio-4")
 
 {\bf Exercício 4.}
 
