--- a/2021-1-C2-os-dois-TFCs.tex
+++ b/2021-1-C2-os-dois-TFCs.tex
@@ -20,12 +20,8 @@
 % http://angg.twu.net/LATEX/2021-1-C2-os-dois-TFCs.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-os-dois-TFCs" "2" "c2m211tfcs" "c2t")
-%
-% Video (not yet):
-% (find-ssr-links "c2m211tfcs" "2021-1-C2-os-dois-TFCs" "78Th0InLPX4")
-% (code-video     "c2m211tfcsvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-os-dois-TFCs.mp4")
-% (find-c2m211tfcsvideo "0:00" "19/ago/2021")
 
+% «.video-1»			(to "video-1")
 % «.defs»			(to "defs")
 % «.title»			(to "title")
 % «.diferenca»			(to "diferenca")
@@ -43,6 +39,16 @@
 % «.exercicio-5»		(to "exercicio-5")
 %
 % «.djvuize»			(to "djvuize")
+
+% «video-1»  (to ".video-1")
+% (c2m211tfcsa    "video-1")
+% (find-ssr-links "c2m211tfcs" "2021-1-C2-os-dois-TFCs" "78Th0InLPX4")
+% (code-video     "c2m211tfcsvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-os-dois-TFCs.mp4")
+% (find-c2m211tfcsvideo "0:00" "19/ago/2021")
+% (find-c2m211tfcsvideo "2:50")
+% (find-c2m211tfcsvideo "6:30" "altura do f depois e do f antes")
+% (find-c2m211tfcsvideo "18:00" "aqui a derivada dava 2")
+% (find-c2m211tfcsvideo "18:30" "nos outros ponto F'(x)=f(x) era verdade")
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
