--- a/2021-1-C2-propriedades-da-integral.tex
+++ b/2021-1-C2-propriedades-da-integral.tex
@@ -21,24 +21,43 @@
 % http://angg.twu.net/LATEX/2021-1-C2-propriedades-da-integral.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-propriedades-da-integral" "2" "c2m211pr" "c2pr")
-%
-% Video:
-% (find-ssr-links "c2m211pr" "2021-1-C2-propriedades-da-integral" "ORfsWiwelV8")
-% (code-video     "c2m211prvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-propriedades-da-integral.mp4")
-% (find-c2m211prvideo "0:00" "4/agosto")
 
-% (find-ssr-links "c2m211prs" "2021-1-C2-propriedades-da-integral-2" "MmlQTtH5jFo")
-% (code-video "c2m211prsvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-propriedades-da-integral-2.mp4")
+% «.video-1»	(to "video-1")
+% «.video-2»	(to "video-2")
+% «.video-3»	(to "video-3")
+
+% «video-1»  (to ".video-1")
+% (c2m211pra      "video-1")
+% (find-ssr-links     "c2m211pr" "2021-1-C2-propriedades-da-integral" "ORfsWiwelV8")
+% (code-eevvideo      "c2m211pr" "2021-1-C2-propriedades-da-integral" "ORfsWiwelV8")
+% (code-eevlinksvideo "c2m211pr" "2021-1-C2-propriedades-da-integral" "ORfsWiwelV8")
+% (find-c2m211prvideo  "0:00")
+% (find-c2m211prvideo  "0:00" "4/agosto")
+% (find-c2m211prvideo "10:40" "aditividade no domínio")
+% (find-c2m211prvideo "12:01" "integrais de funções constantes")
+% (find-c2m211prvideo "14:14" "integrando funções escada")
+
+% «video-2»  (to ".video-2")
+% (c2m211pra      "video-2")
+% (find-ssr-links     "c2m211prs" "2021-1-C2-propriedades-da-integral-2" "MmlQTtH5jFo")
+% (code-eevvideo      "c2m211prs" "2021-1-C2-propriedades-da-integral-2" "MmlQTtH5jFo")
+% (code-eevlinksvideo "c2m211prs" "2021-1-C2-propriedades-da-integral-2" "MmlQTtH5jFo")
+% (find-c2m211prsvideo "0:00")
 % (find-c2m211prsvideo "0:00" "11/agosto")
+% (find-c2m211prsvideo "3:59" "F e G têm gráficos deslocados")
 
-% (find-ssr-links "c2m211prex9" "2021-1-C2-propriedades-da-integral-3" "J97x7MNpr90")
-% (code-video "c2m211prex9video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-propriedades-da-integral-3.mp4")
+% «video-3»  (to ".video-3")
+% (c2m211pra      "video-3")
+% (find-ssr-links     "c2m211prex9" "2021-1-C2-propriedades-da-integral-3" "J97x7MNpr90")
+% (code-eevvideo      "c2m211prex9" "2021-1-C2-propriedades-da-integral-3" "J97x7MNpr90")
+% (code-eevlinksvideo "c2m211prex9" "2021-1-C2-propriedades-da-integral-3" "J97x7MNpr90")
+% (find-c2m211prex9video "0:00")
 % (find-c2m211prex9video "0:00" "12/agosto")
 % (find-c2m211prex9video "0:25" "TFC1")
 % (find-c2m211prex9video "0:45" "resolvendo uma EDO")
 % (find-c2m211prex9video "1:10" "no MT1 eu dava essa função f(x)")
 % (find-c2m211prex9video "2:00" "F(2)=0")
-
+% (find-c2m211prex9video "3:34" "F'(x)=f(x)")
 
 
 % «.defs»			(to "defs")
@@ -76,6 +95,7 @@
 % «.exercicio-7»		(to "exercicio-7")
 % «.exercicio-8»		(to "exercicio-8")
 % «.TFC1-escadas»		(to "TFC1-escadas")
+% «.TFC1-escadas-metodo»	(to "TFC1-escadas-metodo")
 % «.exercicio-9»		(to "exercicio-9")
 %
 % «.djvuize»			(to "djvuize")
@@ -240,7 +260,7 @@ Eduardo Ochs - RCN/PURO/UFF
 \newpage
 
 % «introducao»  (to ".introducao")
-% (c2m211prp 1 "introducao")
+% (c2m211prp 2 "introducao")
 % (c2m211pra   "introducao")
 
 {\bf Introdução}
@@ -1651,6 +1671,10 @@ então:
 Ou seja, dá pra encontrar a função $F$ \ColorRed{resolvendo uma EDO}.
 
 \newpage
+
+% «TFC1-escadas-metodo»  (to ".TFC1-escadas-metodo")
+% (c2m211prp 46 "TFC1-escadas-metodo")
+% (c2m211pra    "TFC1-escadas-metodo")
 
 {\bf O TFC1 para funções escada: um método}
 
