--- a/2021-1-C2-somas-1-dicas.tex
+++ b/2021-1-C2-somas-1-dicas.tex
@@ -23,19 +23,57 @@
 %
 % «video-1»  (to ".video-1")
 % (c2m211somas1da "video-1")
-% (find-ssr-links "c2m211somas1d" "2021-1-C2-somas-1-dicas" "pCD1p9FZYdI")
-% (code-video     "c2m211somas1dvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas.mp4")
+% (find-ssr-links     "c2m211somas1d" "2021-1-C2-somas-1-dicas" "pCD1p9FZYdI")
+% (code-eevvideo      "c2m211somas1d" "2021-1-C2-somas-1-dicas" "pCD1p9FZYdI")
+% (code-eevlinksvideo "c2m211somas1d" "2021-1-C2-somas-1-dicas" "pCD1p9FZYdI")
+% (find-yttranscript-links "c2m211somas1d" "pCD1p9FZYdI")
+% (find-eevvideosfile "2021-1-C2-somas-1-dicas.vtt")
 % (find-c2m211somas1dvideo "0:00")
-% (find-c2m211somas1dvideo "0:49" "na aula passada várias pessoas disseram que não tão entendendo nada")
+% (find-c2m211somas1dvideo "0:00" "(2021-jun-30, vídeo extra sobre não tou entendendo nada)")
+% (find-c2m211somas1dvideo "0:49" "várias pessoas disseram que não tão entendendo nada")
 % (find-c2m211somas1dvideo "0:52" "e que os vídeos que eu fiz não tão ajudando nada")
+% (find-c2m211somas1dvideo "1:36" "um trecho de uma conversa do Telegram")
+% (find-c2m211somas1dvideo "1:52" "que são só sobre interpretação")
+% (find-c2m211somas1dvideo "2:23" "não dá pra deixar a notação pro final")
+% (find-c2m211somas1dvideo "2:42" "pra mim a matéria são centenas de itens")
 % (find-c2m211somas1dvideo "3:35" "eu nunca iria descobrir ... somatórios")
 % (find-c2m211somas1dvideo "3:43" "a gente supõe que os alunos sabem determinadas coisas")
+% (find-c2m211somas1dvideo "4:02" "e eu preciso descobrir o que vocês não sabem")
+% (find-c2m211somas1dvideo "4:12" "que eu preparei um material sobre somatórios")
+% (find-c2m211somas1dvideo "4:42" "somatório tem tudo a ver com substituição")
+% (find-c2m211somas1dvideo "5:16" "soma de PG")
+% (find-c2m211somas1dvideo "5:45" "depois coloca essas cópias lado a lado")
+% (find-c2m211somas1dvideo "6:26" "e aqui eu volto pra coisas mais básicas")
+% (find-c2m211somas1dvideo "7:02" "toda vez que a gente se enrolar num somatório")
+% (find-c2m211somas1dvideo "7:21" "e aqui tem uns exercícios mais básicos")
+% (find-c2m211somas1dvideo "8:45" "ambíguo?")
+% (find-c2m211somas1dvideo "9:06" "chutar e testar")
+% (find-c2m211somas1dvideo "9:15" "quando a gente não souber interpretar")
+% (find-c2m211somas1dvideo "9:18" "chutar várias interpretações razoáveis")
+% (find-c2m211somas1dvideo "9:23" "o truque vai ser escrever essas hipóteses")
+% (find-c2m211somas1dvideo "9:50" "em geral se a gente escrever a pergunta")
+% (find-c2m211somas1dvideo "10:08" "cada PDF tem vários exercícios")
+% (find-c2m211somas1dvideo "10:52" "passa a ser comum ter trechos de uma linha")
+% (find-c2m211somas1dvideo "11:12" "como fazer pra não ficar paralisado")
+% (find-c2m211somas1dvideo "11:26" "e a técnica pra isso é aprenderem a escrever")
+% (find-c2m211somas1dvideo "11:50" "me mandem as dúvidas de vocês")
+% (find-c2m211somas1dvideo "12:10" "as aulas por Telegram numa espécie de aula presencial")
+% (find-c2m211somas1dvideo "12:28" "o pior que pode acontecer")
+% (find-c2m211somas1dvideo "12:42" "provavelmente tem outras pessoas com a mesma dúvida")
+% (find-c2m211somas1dvideo "13:14" "ajustando o nível de detalhe")
+% (find-c2m211somas1dvideo "13:27" "vocês me dizem onde tem algo que vocês não entenderam")
+% (find-c2m211somas1dvideo "13:40" "na linguagem matemática certa")
 % (find-c2m211somas1dvideo "14:09" "dica 7")
+% (find-c2m211somas1dvideo "14:56" "fácil de ler e fácil de verificar")
+% (find-c2m211somas1dvideo "15:17" "pra uma pessoa que sabe pouco de GA")
+% (find-c2m211somas1dvideo "16:58" "se as outras pessoas acharem")
 %
 % «video-2»  (to ".video-2")
 % (c2m211somas1da "video-2")
 % (find-ssr-links "c2m211somas1d2" "2021-1-C2-somas-1-dicas-2" "Q0dxniyVZuA")
-% (code-video    "c2m211somas1d2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas-2.mp4")
+% (code-eevvideo       "c2m211somas1d2" "2021-1-C2-somas-1-dicas-2")
+% (code-eevvideo-links "c2m211somas1d2" "2021-1-C2-somas-1-dicas-2")
+% (code-eevvideo-local "c2m211somas1d2" "2021-1-C2-somas-1-dicas-2")
 % (find-c2m211somas1d2video "0:00")
 
 % «.video-1»			(to "video-1")
