--- a/2021-1-C2-somas-2-4.tex
+++ b/2021-1-C2-somas-2-4.tex
@@ -21,8 +21,8 @@
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-somas-2-4" "2" "c2m211somas24" "c2so24")
 %
-% Video:
-% (find-ssr-links "c2m211somas24" "2021-1-C2-somas-2-4")
+% Video (ainda não):
+% (find-ssr-links "c2m211somas24" "2021-1-C2-somas-2-4" "{naoexiste}")
 % (code-video     "c2m211somas24video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-2-4.mp4")
 % (find-c2m211somas24video "0:00")
 
