--- a/2021-1-C2-somas-2.tex
+++ b/2021-1-C2-somas-2.tex
@@ -20,37 +20,6 @@
 % http://angg.twu.net/LATEX/2021-1-C2-somas-2.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-somas-2" "2" "c2m211somas2" "c2so2")
-%
-% Video:
-% «video-1»  (to ".video-1")
-% (find-ssr-links "c2m211somas2" "2021-1-C2-somas-2" "qR6M2U_eiwE")
-% (code-video     "c2m211somas2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-2.mp4")
-% (find-c2m211somas2video "0:00")
-%
-% «video-2»  (to ".video-2")
-% (find-ssr-links "c2m211somas2" "2021-1-C2-somas-2b" "ZOAJ8wLnFn8")
-% (code-video "c2m211somas2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-2b.mp4")
-% (find-c2m211somas2video "0:00" "28/jul/2021")
-% (find-c2m211somas2video "0:17" "miniteste exercicio 12")
-% (find-c2m211somas2video "0:28" "miniteste exercicio 14")
-% (find-c2m211somas2video "0:40" "conseguiam enxergar todos os máximos e mínimos")
-% (find-c2m211somas2video "0:45" "[max] e [min] nem sempre")
-% (find-c2m211somas2video "1:05" "enquanto o [sup] daria isso aqui")
-% (find-c2m211somas2video "2:25" "identificarem essas expressões nos desenhos")
-% (find-c2m211somas2video "2:45" "nem sempre eu escolhi as melhores cores")
-% (find-c2m211somas2video "3:07" "entre as duas aproximações")
-% (find-c2m211somas2video "3:52" "se vocês entenderem esses retângulos como áreas")
-% (find-c2m211somas2video "4:41" "6(6-2) + 4(10-6)")
-% (find-c2m211somas2video "5:09" "quando a gente conseguir entender essas desigualdades")
-% (find-c2m211somas2video "5:22" "no semestre passado")
-% (find-c2m211somas2video "5:35" "na P1")
-% (find-c2m211somas2video "5:47" "contando quadradinhos - inclusive exercício")
-% (find-c2m211somas2video "6:23" "se vocês não conseguirem calcular no olho")
-% (find-c2m211somas2video "6:40" "eu dei uma questão em que eu não dava o desenho")
-
-% Videos antigos:
-% (c2m202somas2a "video-1-imagens")
-% (c2m202somas2a "video-2-infs-e-sups")
 
 % «.video-1»			(to "video-1")
 % «.video-2»			(to "video-2")
@@ -106,6 +75,48 @@
 % «.trailer»			(to "trailer")
 %
 % «.djvuize»	(to "djvuize")
+
+
+
+% Video:
+% «video-1»  (to ".video-1")
+% (c2m211somas2a  "video-1")
+% (find-ssr-links     "c2m211somas2" "2021-1-C2-somas-2" "qR6M2U_eiwE")
+% (code-eevvideo      "c2m211somas2" "2021-1-C2-somas-2" "qR6M2U_eiwE")
+% (code-eevlinksvideo "c2m211somas2" "2021-1-C2-somas-2" "qR6M2U_eiwE")
+% (find-c2m211somas2video "0:00")
+% (find-c2m211somas2video "2:23" "Exercício 3: Tipos")
+% (find-c2m211somas2video "3:39" "Exercício 3: tipos")
+% (find-c2m211somas2video "6:29" "alguns slides sobre somatórios")
+%
+% «video-2»  (to ".video-2")
+% (c2m211somas2a  "video-2")
+% (find-ssr-links     "c2m211somas2" "2021-1-C2-somas-2b" "ZOAJ8wLnFn8")
+% (code-eevvideo      "c2m211somas2" "2021-1-C2-somas-2b" "ZOAJ8wLnFn8")
+% (code-eevlinksvideo "c2m211somas2" "2021-1-C2-somas-2b" "ZOAJ8wLnFn8")
+% (find-c2m211somas2video "0:00" "28/jul/2021")
+% (find-c2m211somas2video "0:17" "miniteste exercicio 12")
+% (find-c2m211somas2video "0:28" "miniteste exercicio 14")
+% (find-c2m211somas2video "0:40" "conseguiam enxergar todos os máximos e mínimos")
+% (find-c2m211somas2video "0:45" "[max] e [min] nem sempre")
+% (find-c2m211somas2video "1:05" "enquanto o [sup] daria isso aqui")
+% (find-c2m211somas2video "2:25" "identificarem essas expressões nos desenhos")
+% (find-c2m211somas2video "2:45" "nem sempre eu escolhi as melhores cores")
+% (find-c2m211somas2video "3:07" "entre as duas aproximações")
+% (find-c2m211somas2video "3:52" "se vocês entenderem esses retângulos como áreas")
+% (find-c2m211somas2video "4:41" "6(6-2) + 4(10-6)")
+% (find-c2m211somas2video "5:09" "quando a gente conseguir entender essas desigualdades")
+% (find-c2m211somas2video "5:22" "no semestre passado")
+% (find-c2m211somas2video "5:35" "na P1")
+% (find-c2m211somas2video "5:47" "contando quadradinhos - inclusive exercício")
+% (find-c2m211somas2video "6:23" "se vocês não conseguirem calcular no olho")
+% (find-c2m211somas2video "6:40" "eu dei uma questão em que eu não dava o desenho")
+
+% Videos antigos:
+% (c2m202somas2a "video-1-imagens")
+% (c2m202somas2a "video-2-infs-e-sups")
+
+
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -2167,6 +2178,10 @@ com $y=1$...)
 % «trailer»  (to ".trailer")
 % (c2m211somas2p 50 "trailer")
 % (c2m211somas2a    "trailer")
+% Questão:  (c2m202p1p 3 "questao-1")
+%           (c2m202p1a   "questao-1")
+% Gabarito: (c2m202p1p 8 "gabarito-1")
+%           (c2m202p1a   "gabarito-1")
 
 {\bf Propriedades da integral: trailer}
 
