--- a/2021-1-C3-abertos-e-fechados.tex
+++ b/2021-1-C3-abertos-e-fechados.tex
@@ -21,6 +21,11 @@
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C3-abertos-e-fechados" "3" "c3m211af" "c3af")
 %
+% Superseded by:
+% (c3m222topp 1 "title")
+% (c3m222topa   "title")
+% (c3m222topa   "title" "Aulas 26 e 27: abertos e fechados em $\\R^2$")
+%
 % «video-1»  (to ".video-1")
 % (find-ssr-links "c3m211af" "2021-1-C3-abertos-e-fechados" "3_X26Abd0sk")
 % (code-video     "c3m211afvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-abertos-e-fechados.mp4")
