--- a/2021-1-C3-curvas-de-nivel.tex
+++ b/2021-1-C3-curvas-de-nivel.tex
@@ -23,14 +23,29 @@
 %
 % Videos:
 % «video-1»  (to ".video-1")
-% (find-ssr-links "c3m211cn" "2021-1-C3-curvas-de-nivel" "mrNyBAMOyqo")
-% (code-video     "c3m211cnvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-curvas-de-nivel.mp4")
-% (find-c3m211cnvideo "0:00")
-%
+% (c3m211cna      "video-1")
+% (find-ssr-links     "c3m211cn" "2021-1-C3-curvas-de-nivel" "mrNyBAMOyqo")
+% (code-eevvideo      "c3m211cn" "2021-1-C3-curvas-de-nivel" "mrNyBAMOyqo")
+% (code-eevlinksvideo "c3m211cn" "2021-1-C3-curvas-de-nivel" "mrNyBAMOyqo")
+% (find-c3m211cnvideo "0:00" "9/jul/2021")
+% (find-c3m211cnvideo "4:10" "Na P1 de 2020.2")
+% (find-c3m211cnvideo "4:53" "Questão 1")
+% (find-c3m211cnvideo "5:42" "a função w(x) é horizontal até aqui depois sobre")
+% (find-c3m211cnvideo "6:53" "F(x,y)=..., G(x,y)=..., H(x,y)=..., M(x,y)=...")
+
 % «video-2»  (to ".video-2")
-% (find-ssr-links "c3m211cn2" "2021-1-C3-curvas-de-nivel-2" "usBNtNyZRCA")
-% (code-video "c3m211cn2video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-curvas-de-nivel-2.mp4")
+% (c3m211cna      "video-2")
+% (find-ssr-links     "c3m211cn2" "2021-1-C3-curvas-de-nivel-2" "usBNtNyZRCA")
+% (code-eevvideo      "c3m211cn2" "2021-1-C3-curvas-de-nivel-2" "usBNtNyZRCA")
+% (code-eevlinksvideo "c3m211cn2" "2021-1-C3-curvas-de-nivel-2" "usBNtNyZRCA")
 % (find-c3m211cn2video "0:00" "Derivadas parciais no olhômetro")
+% (find-c3m211cn2video "1:55" "coeficiente angular 1")
+% (find-c3m211cn2video "4:02" "coeficiente angular -1 - contas com letras")
+% (find-c3m211cn2video "6:00" "cortando a pirâmide em x=3")
+% (find-c3m211cn2video "6:36" "cortando a pirâmide em x=3 - figura")
+% (find-c3m211cn2video "10:30" "x_0 + 0.1 - mais fácil só se fosse inteiro")
+% (find-c3m211cn2video "10:57" "(4,3)")
+% (find-c3m211cn2video "12:20" "Calcule sem escrever nada")
 
 
 
