--- a/2021-1-C3-funcoes-quadraticas.tex
+++ b/2021-1-C3-funcoes-quadraticas.tex
@@ -21,52 +21,14 @@
 % http://angg.twu.net/LATEX/2021-1-C3-funcoes-quadraticas.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C3-funcoes-quadraticas" "3" "c3m211q" "c3q")
+
+% «.video-1»	(to "video-1")
+% «.video-2»	(to "video-2")
+% «.video-3»	(to "video-3")
+% «.video-4»	(to "video-4")
+% «.video-5»	(to "video-5")
+% «.video-6»	(to "video-6")
 %
-% Video (not yet):
-% (find-ssr-links "c3m211q" "2021-1-C3-funcoes-quadraticas" "2noSv8hyNIk")
-% (code-video     "c3m211qvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas.mp4")
-% (find-c3m211qvideo "0:00")
-% (find-c3m211qvideo "0:45" "derivadas parciais")
-% (find-c3m211qvideo "1:07" "plano tangente é uma aproximação de 1ª ordem")
-% (find-c3m211qvideo "2:20" "a gente vai usar essa equação aqui pra superfície")
-% (find-c3m211qvideo "3:22" "termos de grau 0, 1 e 2")
-% (find-c3m211qvideo "4:05" "figuras")
-% (find-c3m211qvideo "4:25" "x0 e y0")
-% (find-c3m211qvideo "4:55" "pilares")
-% (find-c3m211qvideo "5:59" "Delta x = 1")
-% (find-c3m211qvideo "7:30" "2 + (Delta x)^2")
-% (find-c3m211qvideo "8:04" "parecidos mas com y")
-
-% (find-ssr-links "c3m211q2" "2021-1-C3-funcoes-quadraticas-2" "noVh-RsK5Jo")
-% (code-video "c3m211q2video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas-2.mp4")
-% (find-c3m211q2video "0:00")
-% (find-c3m211q2video "0:23" "sinal da funcao")
-% (find-c3m211q2video "1:36" "produto")
-% (find-c3m211q2video "2:30" "a gente só tá interessado nessa região")
-% (find-c3m211q2video "2:53" "em torno do ponto (x0,y0)")
-% (find-c3m211q2video "3:05" "x nesse intervalo, y nesse")
-% (find-c3m211q2video "3:29" "façam o diagrama de sinais")
-% (find-c3m211q2video "5:25" "todas tem o +2")
-% (find-c3m211q2video "6:09" "combinar diagramas")
-% (find-c3m211q2video "7:14" "wikipedia: quadric")
-
-% (find-ssr-links "c3m211q3" "2021-1-C3-funcoes-quadraticas-3" "VwowES6EM3Y")
-% (code-video "c3m211q3video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas-3.mp4")
-% (find-c3m211q3video "0:00" "13/agosto")
-
-% (find-ssr-links "c3m211q4" "2021-1-C3-funcoes-quadraticas-4" "d0fnURoPI9Q")
-% (code-video "c3m211q4video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas-4.mp4")
-% (find-c3m211q4video "0:00")
-% (find-c3m211q4video "0:00" "20/ago/2021 - Thompson/Gardner")
-
-% (find-ssr-links "c3m211q5" "2021-1-C3-funcoes-quadraticas-5" "Ubc7wXK22fM")
-% (code-video "c3m211q5video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas-5.mp4")
-% (find-c3m211q5video "0:00" "20/ago/2021 - exercício 6")
-
-% (find-ssr-links "c3m211q6" "2021-1-C3-funcoes-quadraticas-6" "B0ryTOu_wC0")
-% (code-video "c3m211q6video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-funcoes-quadraticas-6.mp4")
-% (find-c3m211q6video "0:00" "20/ago/2021 - derivadas direcionais")
-
 % «.defs»			(to "defs")
 % «.title»			(to "title")
 % «.point-of-view»		(to "point-of-view")
@@ -93,6 +55,98 @@
 % «.derivada-direcional»	(to "derivada-direcional")
 %
 % «.djvuize»			(to "djvuize")
+
+
+
+% «video-1»  (to ".video-1")
+% (c3m211qa       "video-1")
+% (find-ssr-links     "c3m211q" "2021-1-C3-funcoes-quadraticas" "2noSv8hyNIk")
+% (code-eevvideo      "c3m211q" "2021-1-C3-funcoes-quadraticas" "2noSv8hyNIk")
+% (code-eevlinksvideo "c3m211q" "2021-1-C3-funcoes-quadraticas" "2noSv8hyNIk")
+% (find-c3m211qvideo "0:00")
+% (find-c3m211qvideo "0:00" "11/ago/2021: aula 17: algumas funções quadráticas")
+% (find-c3m211qvideo "0:45" "derivadas parciais")
+% (find-c3m211qvideo "1:07" "plano tangente é uma aproximação de 1ª ordem")
+% (find-c3m211qvideo "2:20" "a gente vai usar essa equação aqui pra superfície")
+% (find-c3m211qvideo "3:22" "termos de grau 0, 1 e 2")
+% (find-c3m211qvideo "4:05" "figuras")
+% (find-c3m211qvideo "4:25" "x0 e y0")
+% (find-c3m211qvideo "4:55" "pilares")
+% (find-c3m211qvideo "5:59" "Delta x = 1")
+% (find-c3m211qvideo "6:13" "x1 e Delta x")
+% (find-c3m211qvideo "7:30" "2 + (Delta x)^2")
+% (find-c3m211qvideo "8:04" "parecidos mas com y")
+% (find-c3m211qvideo "10:07" "numerozinhos")
+% (find-c3m211qvideo "11:20" "Exercício 1: faça os diagramas de numerozinhos")
+% (find-c3m211qvideo "11:58" "x0-1, x0, x0+1, y0-1, y0, y0+1")
+% (find-c3m211qvideo "12:15" "a gente só tá interessado nesses pontos aqui")
+% (find-c3m211qvideo "12:50" "Δx=-1, Δx=0, Δx=1, Δy=-1, Δy=0, Δy=1")
+% (find-c3m211qvideo "13:30" "9 numerozinhos")
+
+% «video-2»  (to ".video-2")
+% (c3m211qa       "video-2")
+% (find-ssr-links     "c3m211q2" "2021-1-C3-funcoes-quadraticas-2" "noVh-RsK5Jo")
+% (code-eevvideo      "c3m211q2" "2021-1-C3-funcoes-quadraticas-2" "noVh-RsK5Jo")
+% (code-eevlinksvideo "c3m211q2" "2021-1-C3-funcoes-quadraticas-2" "noVh-RsK5Jo")
+% (find-c3m211q2video "0:00")
+% (find-c3m211q2video "0:00" "11/ago/2021: aula 17: algumas funções quadráticas, video 2")
+% (find-c3m211q2video "0:23" "sinal da funcao")
+% (find-c3m211q2video "1:36" "produto")
+% (find-c3m211q2video "2:30" "a gente só tá interessado nessa região")
+% (find-c3m211q2video "2:53" "em torno do ponto (x0,y0)")
+% (find-c3m211q2video "3:05" "x nesse intervalo, y nesse")
+% (find-c3m211q2video "3:29" "façam o diagrama de sinais")
+% (find-c3m211q2video "4:28" "o diagrama de sinais do (a)")
+% (find-c3m211q2video "4:56" "o diagrama de sinais do (a), mais compa")
+% (find-c3m211q2video "5:16" "o diagrama de sinais do (b)")
+% (find-c3m211q2video "5:23" "compara com essas figuras daqui - todas tem o +2")
+% (find-c3m211q2video "5:58" "aqui ficou positivo também")
+% (find-c3m211q2video "6:09" "combinar diagramas")
+% (find-c3m211q2video "6:17" "onde é que Δy é 0?")
+% (find-c3m211q2video "6:27" "quando eu combinar os dois no item d")
+% (find-c3m211q2video "7:14" "wikipedia: quadric")
+
+% «video-3»  (to ".video-3")
+% (c3m211qa       "video-3")
+% (find-ssr-links     "c3m211q3" "2021-1-C3-funcoes-quadraticas-3" "VwowES6EM3Y")
+% (code-eevvideo      "c3m211q3" "2021-1-C3-funcoes-quadraticas-3" "VwowES6EM3Y")
+% (code-eevlinksvideo "c3m211q3" "2021-1-C3-funcoes-quadraticas-3" "VwowES6EM3Y")
+% (find-c3m211q3video "0:00")
+% (find-c3m211q3video "0:00" "13/agosto: aula 17: algumas funções quadráticas")
+% (find-c3m211q3video "6:45" "os pontos (x,y) estão andando pra cá")
+
+% «video-4»  (to ".video-4")
+% (c3m211qa       "video-4")
+% (find-ssr-links     "c3m211q4" "2021-1-C3-funcoes-quadraticas-4" "d0fnURoPI9Q")
+% (code-eevvideo      "c3m211q4" "2021-1-C3-funcoes-quadraticas-4" "d0fnURoPI9Q")
+% (code-eevlinksvideo "c3m211q4" "2021-1-C3-funcoes-quadraticas-4" "d0fnURoPI9Q")
+% (find-c3m211q4video "0:00")
+% (find-c3m211q4video "0:00" "20/ago/2021 - Thompson/Gardner")
+% (find-c3m211q4video "15:00" "and this relation is called a function")
+% (find-c3m211q4video "17:05" "dependent variable")
+% (find-c3m211q4video "19:03" "the existence of a function ... F(x,y,z)")
+% (find-c3m211q4video "20:10" "fails the vertical line test")
+% (find-c3m211q4video "21:03" "useful dodge")
+% (find-c3m211q4video "22:10" "derivada da função inversa - e como traduz")
+
+% «video-5»  (to ".video-5")
+% (c3m211qa       "video-5")
+% (find-ssr-links     "c3m211q5" "2021-1-C3-funcoes-quadraticas-5" "Ubc7wXK22fM")
+% (code-eevvideo      "c3m211q5" "2021-1-C3-funcoes-quadraticas-5" "Ubc7wXK22fM")
+% (code-eevlinksvideo "c3m211q5" "2021-1-C3-funcoes-quadraticas-5" "Ubc7wXK22fM")
+% (find-c3m211q5video "0:00")
+% (find-c3m211q5video "0:00" "20/ago/2021 - sobre o exercício 6")
+
+% «video-6»  (to ".video-6")
+% (c3m211qa       "video-6")
+% (find-ssr-links     "c3m211q6" "2021-1-C3-funcoes-quadraticas-6" "B0ryTOu_wC0")
+% (code-eevvideo      "c3m211q6" "2021-1-C3-funcoes-quadraticas-6" "B0ryTOu_wC0")
+% (code-eevlinksvideo "c3m211q6" "2021-1-C3-funcoes-quadraticas-6" "B0ryTOu_wC0")
+% (find-c3m211q6video "0:00")
+% (find-c3m211q6video "0:00" "20/ago/2021 - derivadas direcionais")
+
+
+
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -247,31 +301,31 @@ não precisar ser o zero. Veja as figuras 3D daqui...
 
 \newpage
 
-{\bf A equação da superfície}
-
-Nós vamos usar esta equação pra nossa superfície:
-%
-$$\begin{array}{rcl}
-  z &=& z(x,y) \\
-    &=& z(x_1,y_1) \\
-    &=& a + b·(x_1-x_0) + c·(y_1-y_0) \\
-    &+& d·(x_1-x_0)^2 + e·(x_1-x_0)(y_1-y_0) \\
-    &+& f·(y_1-y_0)^2 \\
-    &=& a + bΔx + cΔy + dΔx^2 + eΔxΔy + fΔy^2 \\
-  \end{array}
-$$
-
-Repare que vamos usar $x=x_1$ e $y=y_1$ pra podermos
-
-usar as convenções $Δx=x_1-x_0$ e $Δy=y_1-y_0$ sem
-
-precisamos definir nada extra.
-
-\msk
-
-Nas figuras dos próximos slides vamos sempre usar
-
-$x_0=3$ e $y_0=2$.
+% {\bf A equação da superfície}
+% 
+% Nós vamos usar esta equação pra nossa superfície:
+% %
+% $$\begin{array}{rcl}
+%   z &=& z(x,y) \\
+%     &=& z(x_1,y_1) \\
+%     &=& a + b·(x_1-x_0) + c·(y_1-y_0) \\
+%     &+& d·(x_1-x_0)^2 + e·(x_1-x_0)(y_1-y_0) \\
+%     &+& f·(y_1-y_0)^2 \\
+%     &=& a + bΔx + cΔy + dΔx^2 + eΔxΔy + fΔy^2 \\
+%   \end{array}
+% $$
+% 
+% Repare que vamos usar $x=x_1$ e $y=y_1$ pra podermos
+% 
+% usar as convenções $Δx=x_1-x_0$ e $Δy=y_1-y_0$ sem
+% 
+% precisamos definir nada extra.
+% 
+% \msk
+% 
+% Nas figuras dos próximos slides vamos sempre usar
+% 
+% $x_0=3$ e $y_0=2$.
 
 \newpage
 
@@ -311,188 +365,188 @@ $x_0=3$ e $y_0=2$.
 
 % ----------------------------------------
 
-% «figuras-3D»  (to ".figuras-3D")
-% (c3m211qp 4 "figuras-3D")
-% (c3m211qa   "figuras-3D")
-
-\unitlength=8pt
-
-\def\QP#1#2{
-  \begin{array}{c}
-    \setsrf {#1}
-    \QuadraticInPerspective{srf} \\
-    #2
-  \end{array}
-  }
-
-\pu
-
-$$\begin{array}{c}
-   \QP {a=2} {z = 2}
-   \quad
-   \QP {a=2, Dx=1} {z = 2+Δx}
-   \quad
-   \QP {a=2, Dxx=1} {z = 2+Δx^2}
-  \\
-  \\
-   \QP {a=2} {z = 2}
-   \quad
-   \QP {a=2, Dy=1} {z = 2+Δy}
-   \quad
-   \QP {a=2, Dyy=1} {z = 2+Δy^2}
-  \end{array}
-$$
-
-
-\newpage
-
-$$\begin{array}{c}
-   \QP {a=2, Dx=1, Dy=1} {z = 2 + (Δx + Δy)}
-   \quad
-   \QP {a=2, Dxx=1, Dyy=1, Dxy=2} {z = 2 + (Δx + Δy)^2}
-  \\
-  \\
-   \QP {a=2, Dx=-1, Dy=1}          {z = 2 + (Δy - Δx)}
-   \quad
-   \QP {a=2, Dxx=1, Dyy=1, Dxy=-2} {z = 2 + (Δy - Δx)^2}
-  \end{array}
-$$
-
-
-\newpage
-
-% «exercicio-1»  (to ".exercicio-1")
-% (c3m211qp 6 "exercicio-1")
-% (c3m211qa   "exercicio-1")
-
-{\bf Exercício 1.}
-
-Faça o diagram de numerozinhos de cada uma das superfícies
-
-abaixo. Considere que os pontos que nos interessam são só
-
-os em que $x∈\{x_0-1, x_0, x_0+1\}$ e $y∈\{x_0-1, x_0, x_0+1\}$.
-
-Veja o vídeo pra entender!
-
-\msk
-
-\begin{tabular}[t]{l}
-a) $z = 2$ \\
-b) $z = x$ \\
-c) $z = Δx$ \\
-d) $z = Δx^2$ \\
-e) $z = Δx^2 + 2$ \\
-\end{tabular}
-\msk
-\begin{tabular}[t]{l}
-f) $z = y$ \\
-g) $z = Δy$ \\
-h) $z = Δy^2$ \\
-i) $z = Δy^2 + 2$ \\
-j) $z = Δx^2+Δy^2$ \\
-k) $z = Δx^2+Δy^2 + 2$ \\
-\end{tabular}
-\msk
-\begin{tabular}[t]{l}
-l) $z = Δx+Δy$ \\
-m) $z = (Δx+Δy)^2$ \\
-n) $z = (Δx+Δy)^2 + 2$ \\
-\end{tabular}
-
-\newpage
-
-% «exercicio-2»  (to ".exercicio-2")
-% (c3m211qp 7 "exercicio-2")
-% (c3m211qa   "exercicio-2")
-
-{\bf Exercício 2.}
-
-Relembre o que era o ``estudo do sinal de uma função''
-
-que você deve ter visto em Cálculo 1, e faça um diagramas
-
-indicando em que intervalos cada uma das funções abaixo
-
-é positiva, negativa, ou zero.
-
-(Veja o segundo vídeo!)
-
-\msk
-
-a) $x$
-
-b) $x+1$
-
-c) $x(x+1)$
-
-d) $4-x$
-
-e) $x(x+1)(4-x)$
-
-\newpage
-
-% «exercicio-3»  (to ".exercicio-3")
-% (c3m211qp 8 "exercicio-3")
-% (c3m211qa   "exercicio-3")
-
-{\bf Exercício 3.}
-
-Agora adapte essa idéia do diagrama do sinal para $\R^2$,
-
-no quadrado com $x∈[x_0-1,x_0+1]$ e $y∈[y_0-1,y_0+1]$,
-
-e faça o diagrama do sinal para cada uma das funções abaixo.
-
-Veja o segundo vídeo pra explicações e exemplos!
-
-\msk
-
-\begin{tabular}[t]{l}
-a) $Δx$   \\
-b) $Δx^2$ \\
-c) $Δy$   \\
-d) $ΔxΔy$ \\
-e) $Δx+Δy$ \\
-f) $Δx-Δy$ \\
-g) $(Δx+Δy)^2$ \\
-h) $(Δx-Δy)^2$ \\
-\end{tabular}
-\quad
-\begin{tabular}[t]{l}
-i) $(Δx+Δy)(Δx-Δy)$ \\
-j) $(Δx+Δy)Δx$ \\
-k) $-(Δx+Δy)^2$ \\
-\end{tabular}
-
-
-\newpage
-
-% «exercicio-4»  (to ".exercicio-4")
-% (c3m211qp 9 "exercicio-4")
-% (c3m211qa   "exercicio-4")
-
-{\bf Exercício 4.}
-
-A partir de agora vamos considerar que:
-%
-$$\begin{array}{rcl}
-  x &=& x(t) \\
-    &=& x(t_1) \\
-    &=& x_0 + α·(t_1-t_0) \\
-    &=& x_0 + αΔt \\
-  y &=& y(t) \\
-    &=& y(t_1) \\
-    &=& y_0 + β·(t_1-t_0) \\
-    &=& y_0 + βΔt \\
-  \end{array}
-$$
-
-Onde $t_0=5$; $x_0$ e $y_0$ continuam os mesmos de antes,
-
-e $α$ e $β$ são constantes cujos valores podem depender
-
-do contexto.
+% % «figuras-3D»  (to ".figuras-3D")
+% % (c3m211qp 4 "figuras-3D")
+% % (c3m211qa   "figuras-3D")
+% 
+% \unitlength=8pt
+% 
+% \def\QP#1#2{
+%   \begin{array}{c}
+%     \setsrf {#1}
+%     \QuadraticInPerspective{srf} \\
+%     #2
+%   \end{array}
+%   }
+% 
+% \pu
+% 
+% $$\begin{array}{c}
+%    \QP {a=2} {z = 2}
+%    \quad
+%    \QP {a=2, Dx=1} {z = 2+Δx}
+%    \quad
+%    \QP {a=2, Dxx=1} {z = 2+Δx^2}
+%   \\
+%   \\
+%    \QP {a=2} {z = 2}
+%    \quad
+%    \QP {a=2, Dy=1} {z = 2+Δy}
+%    \quad
+%    \QP {a=2, Dyy=1} {z = 2+Δy^2}
+%   \end{array}
+% $$
+% 
+% 
+% \newpage
+% 
+% $$\begin{array}{c}
+%    \QP {a=2, Dx=1, Dy=1} {z = 2 + (Δx + Δy)}
+%    \quad
+%    \QP {a=2, Dxx=1, Dyy=1, Dxy=2} {z = 2 + (Δx + Δy)^2}
+%   \\
+%   \\
+%    \QP {a=2, Dx=-1, Dy=1}          {z = 2 + (Δy - Δx)}
+%    \quad
+%    \QP {a=2, Dxx=1, Dyy=1, Dxy=-2} {z = 2 + (Δy - Δx)^2}
+%   \end{array}
+% $$
+% 
+% 
+% \newpage
+% 
+% % «exercicio-1»  (to ".exercicio-1")
+% % (c3m211qp 6 "exercicio-1")
+% % (c3m211qa   "exercicio-1")
+% 
+% {\bf Exercício 1.}
+% 
+% Faça o diagram de numerozinhos de cada uma das superfícies
+% 
+% abaixo. Considere que os pontos que nos interessam são só
+% 
+% os em que $x∈\{x_0-1, x_0, x_0+1\}$ e $y∈\{x_0-1, x_0, x_0+1\}$.
+% 
+% Veja o vídeo pra entender!
+% 
+% \msk
+% 
+% \begin{tabular}[t]{l}
+% a) $z = 2$ \\
+% b) $z = x$ \\
+% c) $z = Δx$ \\
+% d) $z = Δx^2$ \\
+% e) $z = Δx^2 + 2$ \\
+% \end{tabular}
+% \msk
+% \begin{tabular}[t]{l}
+% f) $z = y$ \\
+% g) $z = Δy$ \\
+% h) $z = Δy^2$ \\
+% i) $z = Δy^2 + 2$ \\
+% j) $z = Δx^2+Δy^2$ \\
+% k) $z = Δx^2+Δy^2 + 2$ \\
+% \end{tabular}
+% \msk
+% \begin{tabular}[t]{l}
+% l) $z = Δx+Δy$ \\
+% m) $z = (Δx+Δy)^2$ \\
+% n) $z = (Δx+Δy)^2 + 2$ \\
+% \end{tabular}
+% 
+% \newpage
+% 
+% % «exercicio-2»  (to ".exercicio-2")
+% % (c3m211qp 7 "exercicio-2")
+% % (c3m211qa   "exercicio-2")
+% 
+% {\bf Exercício 2.}
+% 
+% Relembre o que era o ``estudo do sinal de uma função''
+% 
+% que você deve ter visto em Cálculo 1, e faça um diagramas
+% 
+% indicando em que intervalos cada uma das funções abaixo
+% 
+% é positiva, negativa, ou zero.
+% 
+% (Veja o segundo vídeo!)
+% 
+% \msk
+% 
+% a) $x$
+% 
+% b) $x+1$
+% 
+% c) $x(x+1)$
+% 
+% d) $4-x$
+% 
+% e) $x(x+1)(4-x)$
+% 
+% \newpage
+% 
+% % «exercicio-3»  (to ".exercicio-3")
+% % (c3m211qp 8 "exercicio-3")
+% % (c3m211qa   "exercicio-3")
+% 
+% {\bf Exercício 3.}
+% 
+% Agora adapte essa idéia do diagrama do sinal para $\R^2$,
+% 
+% no quadrado com $x∈[x_0-1,x_0+1]$ e $y∈[y_0-1,y_0+1]$,
+% 
+% e faça o diagrama do sinal para cada uma das funções abaixo.
+% 
+% Veja o segundo vídeo pra explicações e exemplos!
+% 
+% \msk
+% 
+% \begin{tabular}[t]{l}
+% a) $Δx$   \\
+% b) $Δx^2$ \\
+% c) $Δy$   \\
+% d) $ΔxΔy$ \\
+% e) $Δx+Δy$ \\
+% f) $Δx-Δy$ \\
+% g) $(Δx+Δy)^2$ \\
+% h) $(Δx-Δy)^2$ \\
+% \end{tabular}
+% \quad
+% \begin{tabular}[t]{l}
+% i) $(Δx+Δy)(Δx-Δy)$ \\
+% j) $(Δx+Δy)Δx$ \\
+% k) $-(Δx+Δy)^2$ \\
+% \end{tabular}
+% 
+% 
+% \newpage
+% 
+% % «exercicio-4»  (to ".exercicio-4")
+% % (c3m211qp 9 "exercicio-4")
+% % (c3m211qa   "exercicio-4")
+% 
+% {\bf Exercício 4.}
+% 
+% A partir de agora vamos considerar que:
+% %
+% $$\begin{array}{rcl}
+%   x &=& x(t) \\
+%     &=& x(t_1) \\
+%     &=& x_0 + α·(t_1-t_0) \\
+%     &=& x_0 + αΔt \\
+%   y &=& y(t) \\
+%     &=& y(t_1) \\
+%     &=& y_0 + β·(t_1-t_0) \\
+%     &=& y_0 + βΔt \\
+%   \end{array}
+% $$
+% 
+% Onde $t_0=5$; $x_0$ e $y_0$ continuam os mesmos de antes,
+% 
+% e $α$ e $β$ são constantes cujos valores podem depender
+% 
+% do contexto.
 
 \newpage
 
@@ -1179,7 +1233,7 @@ Link pro vídeo com dicas:
 \newpage
 
 % «derivada-direcional»  (to ".derivada-direcional")
-% (c3m211qp 32 "derivada-direcional")
+% (c3m211qp 25 "derivada-direcional")
 % (c3m211qa    "derivada-direcional")
 
 {\bf Derivada direcional (Bortolossi)}
