--- a/2021-1-C3-gradiente.tex
+++ b/2021-1-C3-gradiente.tex
@@ -188,6 +188,8 @@ nível e apontam pra direção de maior crescimento da função.
 \newpage
 
 % «exercicio-1»  (to ".exercicio-1")
+% (c3m211gradp 3 "exercicio-1")
+% (c3m211grada   "exercicio-1")
 % (c3mgradp 3 "exercicio-1")
 % (c3mgrada   "exercicio-1")
 
