--- a/2021-1-C3-matriz-jacobiana.tex
+++ b/2021-1-C3-matriz-jacobiana.tex
@@ -20,17 +20,9 @@
 % http://angg.twu.net/LATEX/2021-1-C3-matriz-jacobiana.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C3-matriz-jacobiana" "3" "c3m211j" "c3j")
-%
-% Video 1:
-% (find-ssr-links "c3m211j" "2021-1-C3-matriz-jacobiana" "kMGtZk5er9w")
-% (code-video     "c3m211jvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-matriz-jacobiana.mp4")
-% (find-c3m211jvideo "0:00")
-%
-% Video 2:
-% (find-ssr-links "c3m211j2" "2021-1-C3-matriz-jacobiana-2" "D_YKka3RG9E")
-% (code-video "c3m211j2video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-matriz-jacobiana-2.mp4")
-% (find-c3m211j2video "0:00")
 
+% «.video-1»			(to "video-1")
+% «.video-2»			(to "video-2")
 % «.defs»			(to "defs")
 % «.title»			(to "title")
 % «.exercicio-1»		(to "exercicio-1")
@@ -38,6 +30,22 @@
 % «.mt-dica-contas»		(to "mt-dica-contas")
 %
 % «.djvuize»	(to "djvuize")
+
+
+% «video-1»  (to ".video-1")
+% (c3m211ja       "video-1")
+% (find-ssr-links     "c3m211j" "2021-1-C3-matriz-jacobiana" "kMGtZk5er9w")
+% (code-eevvideo      "c3m211j" "2021-1-C3-matriz-jacobiana" "kMGtZk5er9w")
+% (code-eevlinksvideo "c3m211j" "2021-1-C3-matriz-jacobiana" "kMGtZk5er9w")
+% (find-c3m211jvideo "0:00" "5/ago/2011")
+%
+% «video-2»  (to ".video-2")
+% (c3m211ja       "video-2")
+% (find-ssr-links     "c3m211j2" "2021-1-C3-matriz-jacobiana-2" "D_YKka3RG9E")
+% (code-eevvideo      "c3m211j2" "2021-1-C3-matriz-jacobiana-2" "D_YKka3RG9E")
+% (code-eevlinksvideo "c3m211j2" "2021-1-C3-matriz-jacobiana-2" "D_YKka3RG9E")
+% (find-c3m211j2video "0:00" "27/ago/2021")
+
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -119,6 +127,7 @@
 % (c3m211jp 1 "title")
 % (c3m211ja   "title")
 
+
 \thispagestyle{empty}
 
 \begin{center}
@@ -159,7 +168,33 @@ em $z^2∈\C$.
 
 \msk
 
-\ColorRed{Veja o vídeo!}
+\ColorRed{Veja os vídeos!}
+
+\msk
+
+Vídeo 1:
+
+{\footnotesize
+
+\url{http://angg.twu.net/eev-videos/2021-1-C3-matriz-jacobiana.mp4}
+
+\url{https://www.youtube.com/watch?v=kMGtZk5er9w}
+
+}
+
+\ssk
+
+Vídeo 2:
+
+{\footnotesize
+
+\url{http://angg.twu.net/eev-videos/2021-1-C3-matriz-jacobiana-2.mp4}
+
+\url{https://www.youtube.com/watch?v=D_YKka3RG9E}
+
+}
+
+
 
 \newpage
 
