--- a/2021-1-C3-notacao-de-fisicos.tex
+++ b/2021-1-C3-notacao-de-fisicos.tex
@@ -49,9 +49,12 @@
 
 
 % «video-1»  (to ".video-1")
-% (find-ssr-links "c3m211nf" "2021-1-C3-notacao-de-fisicos" "fMNgr5wDMek")
-% (code-video     "c3m211nfvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-notacao-de-fisicos.mp4")
+% (c3m211nfa      "video-1")
+% (find-ssr-links     "c3m211nf" "2021-1-C3-notacao-de-fisicos" "fMNgr5wDMek")
+% (code-eevvideo      "c3m211nf" "2021-1-C3-notacao-de-fisicos" "fMNgr5wDMek")
+% (code-eevlinksvideo "c3m211nf" "2021-1-C3-notacao-de-fisicos" "fMNgr5wDMek")
 % (find-c3m211nfvideo "0:00")
+% (find-c3m211nfvideo "0:00" "30/jul/2021: introdução à NF, versão preliminar")
 % (find-c3m211nfvideo "0:10" "ainda como entender visualmente derivadas parciais")
 % (find-c3m211nfvideo "0:42" "derivadas parciais")
 % (find-c3m211nfvideo "0:57" "derivadas totais")
@@ -109,17 +112,32 @@
 % (find-c3m211nfvideo "20:50" "terceiro exemplo")
 
 % «video-2»  (to ".video-2")
-% (find-ssr-links "c3m211nf2" "2021-1-C3-notacao-de-fisicos-2" "bjBlOqO-7Do")
-% (code-video "c3m211nf2video" "$S/http/angg.twu.net/eev-videos/2021-1-C3-notacao-de-fisicos-2.mp4")
+% (c3m211nfa      "video-2")
+% (find-ssr-links     "c3m211nf2" "2021-1-C3-notacao-de-fisicos-2" "bjBlOqO-7Do")
+% (code-eevvideo      "c3m211nf2" "2021-1-C3-notacao-de-fisicos-2" "bjBlOqO-7Do")
+% (code-eevlinksvideo "c3m211nf2" "2021-1-C3-notacao-de-fisicos-2" "bjBlOqO-7Do")
 % (find-c3m211nf2video "0:00")
+% (find-c3m211nf2video "0:00" "4/ago/2021: Segundo vídeo sobre notação de físicos")
+% (find-c3m211nf2video "5:15" "linearizações")
+% (find-c3m211nf2video "5:30" "dy e dx como variáveis")
+% (find-c3m211nf2video "9:05" "Thomas: dy/dx = dy/du * du/dx")
+% (find-c3m211nf2video "9:18" "como abreviação")
 
 % «video-3»  (to ".video-3")
-% (find-ssr-links "c3m211nfstr" "2021-1-C3-notacao-de-fisicos-s-tr" "{aindanaosubiproyt}")
-% (code-video "c3m211nfstrvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-notacao-de-fisicos-s-tr.mp4")
-% (find-c3m211nfstrvideo "0:00")
+% (c3m211nfa      "video-3")
+% (find-ssr-links     "c3m211nfstr" "2021-1-C3-notacao-de-fisicos-s-tr" "hOWVxOgv9p0")
+% (code-eevvideo      "c3m211nfstr" "2021-1-C3-notacao-de-fisicos-s-tr" "hOWVxOgv9p0")
+% (code-eevlinksvideo "c3m211nfstr" "2021-1-C3-notacao-de-fisicos-s-tr" "hOWVxOgv9p0")
+% (find-c3m211nfstrvideo "0:00"")
+% (find-c3m211nfstrvideo "0:00" "6/ago/2021: Silvanus Thompson: triângulo")
 
 % «video-4»  (to ".video-4")
-% (find-ssr-links "c3m211nfsesc" "2021-1-C3-notacao-de-fisicos-s-esc" "{aindanaosubiproyt}")
+% (c3m211nfa      "video-4")
+% (find-ssr-links     "c3m211nfsesc" "2021-1-C3-notacao-de-fisicos-s-esc" "-0QxJty23hQ")
+% (code-eevvideo      "c3m211nfsesc" "2021-1-C3-notacao-de-fisicos-s-esc" "-0QxJty23hQ")
+% (code-eevlinksvideo "c3m211nfsesc" "2021-1-C3-notacao-de-fisicos-s-esc" "-0QxJty23hQ")
+% (find-c3m211nfsescvideo "0:00")
+% (find-c3m211nfsescvideo "0:00" "6/ago/2021: Silvanus Thompson: o exemplo da escada")
 
 
 \documentclass[oneside,12pt]{article}
@@ -409,7 +427,7 @@ e pra comentários sobre ela:
 \newpage
 
 % «primeiro-exemplo»  (to ".primeiro-exemplo")
-% (c3m211nfp 5 "primeiro-exemplo")
+% (c3m211nfp 6 "primeiro-exemplo")
 % (c3m211nfa   "primeiro-exemplo")
 
 {\bf Um primeiro exemplo}
