--- a/2021-1-C3-taylor.tex
+++ b/2021-1-C3-taylor.tex
@@ -20,27 +20,9 @@
 % http://angg.twu.net/LATEX/2021-1-C3-taylor.pdf
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C3-taylor" "3" "c3m211ta" "c3ta")
-%
-% Videos:
-% «video-1»  (to ".video-1")
-% (find-ssr-links "c3m211ta" "2021-1-C3-taylor")
-% (code-video     "c3m211tavideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-taylor.mp4")
-% (find-c3m211tavideo "0:00")
-% (find-c3m211tavideo "2:45")
-% (find-c3m211tavideo "4:02" "P(0) é muito fácil de calcular")
-% (find-c3m211tavideo "5:04" "grid grande")
-% (find-c3m211tavideo "5:07" "esse é o truque que a gente já viu")
-% (find-c3m211tavideo "5:48" "é uma trajetória qualquer")
-% (find-c3m211tavideo "8:00" "tangentes")
-% (find-c3m211tavideo "9:30" "tangentes")
 
-% «video-parabolas»  (to ".video-parabolas")
-% (find-ssr-links "c3m211ta" "2021-1-C3-taylor-pa")
-% (code-video "c3m211tavideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-taylor-pa.mp4")
-% (find-c3m211tavideo "0:00")
-
-% «.video-1»	(to "video-1")
-% «.video-parabolas»	(to "video-parabolas")
+% «.video-1»			(to "video-1")
+% «.video-parabolas»		(to "video-parabolas")
 %
 % «.defs»			(to "defs")
 % «.title»			(to "title")
@@ -61,6 +43,34 @@
 % «.exercicio-6-jklmno»		(to "exercicio-6-jklmno")
 %
 % «.djvuize»			(to "djvuize")
+
+
+
+% Videos:
+% «video-1»  (to ".video-1")
+% (find-ssr-links     "c3m211ta" "2021-1-C3-taylor" "{hash}")
+% (code-eevvideo      "c3m211ta" "2021-1-C3-taylor" "{hash}")
+% (code-eevlinksvideo "c3m211ta" "2021-1-C3-taylor" "{hash}")
+% (find-c3m211tavideo "0:00")
+% (find-c3m211tavideo "0:00" "Aula 5: Séries de Taylor e MacLaurin" "2021.1" "15:41")
+% (find-c3m211tavideo "0:11" "2021jun30")
+% (find-c3m211tavideo "2:45" "eu vou pegar uma parábola que é assim")
+% (find-c3m211tavideo "4:02" "P(0) é muito fácil de calcular")
+% (find-c3m211tavideo "5:04" "grid grande")
+% (find-c3m211tavideo "5:07" "esse é o truque que a gente já viu")
+% (find-c3m211tavideo "5:48" "é uma trajetória qualquer")
+% (find-c3m211tavideo "8:00" "tangentes")
+% (find-c3m211tavideo "9:30" "tangentes")
+
+% «video-parabolas»  (to ".video-parabolas")
+% (find-ssr-links     "c3m211tap" "2021-1-C3-taylor-pa" "{hash}")
+% (code-eevvideo      "c3m211tap" "2021-1-C3-taylor-pa" "{hash}")
+% (code-eevlinksvideo "c3m211tap" "2021-1-C3-taylor-pa" "{hash}")
+% (find-c3m211tapvideo "0:00")
+% (find-c3m211tapvideo "0:00" "Aula 5: Séries de Taylor e MacLaurin" "2021.1" "14:40")
+% (find-c3m211tapvideo "0:15" "7/jul/2021")
+% (find-c3m211tapvideo "0:18" "Vamos lá pro slide 16")
+% (find-c3m211tapvideo "0:38" "mas acho que o truque não ficou bem explicado")
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -196,6 +206,8 @@ onde $f^{(0)} = f$, $f^{(1)} = f'$, $f^{(2)} = f''$, etc.
 \newpage
 
 % «taylor-2»  (to ".taylor-2")
+% (c3m211tap 3 "taylor-2")
+% (c3m211taa   "taylor-2")
 
 {\bf Mini-revisão de séries de Taylor (2)}
 
@@ -225,6 +237,8 @@ $\derivs_0(f) = (c, b, 2a, 0, 0, 0, \ldots)$
 \newpage
 
 % «taylor-3»  (to ".taylor-3")
+% (c3m211tap 4 "taylor-3")
+% (c3m211taa   "taylor-3")
 
 {\bf Mini-revisão de séries de Taylor (3)}
 
