--- a/2021-1-C3-visualizar-limites.tex
+++ b/2021-1-C3-visualizar-limites.tex
@@ -21,7 +21,7 @@
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C3-visualizar-limites" "3" "c3m211vl" "c3vl")
 %
-% Video:
+% Video (nao fiz):
 % (find-ssr-links "c3m211vl" "2021-1-C3-visualizar-limites")
 % (code-video     "c3m211vlvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C3-visualizar-limites.mp4")
 % (find-c3m211vlvideo "0:00")
@@ -119,7 +119,7 @@
 %
 % «title»  (to ".title")
 % (c3m211vlp 1 "title")
-% (c3m211vl    "title")
+% (c3m211vla   "title")
 
 \thispagestyle{empty}
 
